Pushing latest site updates

--- a/master/maven/dependencies.html
+++ b/master/maven/dependencies.html
@@ -169,7 +169,7 @@
 <th>Type</th>
 </tr>
 <tr class="b"><td>junit</td>
-<td><a href="http://junit.org" class="externalLink">junit</a></td>
+<td><a class="externalLink" href="http://junit.org">junit</a></td>
 <td>4.6</td>
 <td>jar</td>
 </tr>
@@ -198,19 +198,19 @@
       }
 </script>
 <div class="section"><h3>Dependency Tree</h3>
-<ul><li>com.betfair.platform:virtualheap:jar:1.3-SNAPSHOT <img id="_1846696465" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_379791812', '_1846696465' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_379791812" style="display:none"><table class="bodyTable"><tr class="a"><th>virtualheap</th>
+<ul><li>com.betfair.platform:virtualheap:jar:1.3-SNAPSHOT <img id="_2095850711" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1535841031', '_2095850711' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1535841031" style="display:none"><table class="bodyTable"><tr class="a"><th>virtualheap</th>
 </tr>
-<tr class="b"><td><p><b>Description: </b>A dramework for replicated objects</p>
-<p><b>URL: </b><a href="http://github.com/betfair/virtualheap" class="externalLink">http://github.com/betfair/virtualheap</a></p>
-<p><b>Project License: </b><a href="http://www.apache.org/licenses/LICENSE-2.0.txt" class="externalLink">The Apache Software License, Version 2.0</a></p>
+<tr class="b"><td><p><b>Description: </b>A framework for replicated objects</p>
+<p><b>URL: </b><a class="externalLink" href="http://betfair.github.io/virtualheap">http://betfair.github.io/virtualheap</a></p>
+<p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p>
 </td>
 </tr>
 </table>
-</div><ul><li>junit:junit:jar:4.6 (test) <img id="_1174383689" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1700113280', '_1174383689' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1700113280" style="display:none"><table class="bodyTable"><tr class="a"><th>JUnit</th>
+</div><ul><li>junit:junit:jar:4.6 (test) <img id="_2032922180" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1231439194', '_2032922180' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1231439194" style="display:none"><table class="bodyTable"><tr class="a"><th>JUnit</th>
 </tr>
 <tr class="b"><td><p><b>Description: </b>JUnit is a regression testing framework written by Erich Gamma and Kent Beck. It is used by the developer who implements unit tests in Java.</p>
-<p><b>URL: </b><a href="http://junit.org" class="externalLink">http://junit.org</a></p>
-<p><b>Project License: </b><a href="http://www.opensource.org/licenses/cpl1.0.txt" class="externalLink">Common Public License Version 1.0</a></p>
+<p><b>URL: </b><a class="externalLink" href="http://junit.org">http://junit.org</a></p>
+<p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/cpl1.0.txt">Common Public License Version 1.0</a></p>
 </td>
 </tr>
 </table>
@@ -275,27 +275,27 @@
 <th align="center">Snapshot</th>
 </tr>
 <tr class="a"><td align="left">maven.org</td>
-<td align="left"><a href="http://repo1.maven.org/maven2" class="externalLink">http://repo1.maven.org/maven2</a></td>
+<td align="left"><a class="externalLink" href="http://repo1.maven.org/maven2">http://repo1.maven.org/maven2</a></td>
 <td align="center">Yes</td>
 <td align="center">Yes</td>
 </tr>
 <tr class="b"><td align="left">sonatype-nexus-snapshots</td>
-<td align="left"><a href="https://oss.sonatype.org/content/repositories/snapshots" class="externalLink">https://oss.sonatype.org/content/repositories/snapshots</a></td>
+<td align="left"><a class="externalLink" href="https://oss.sonatype.org/content/repositories/snapshots">https://oss.sonatype.org/content/repositories/snapshots</a></td>
 <td align="center">-</td>
 <td align="center">Yes</td>
 </tr>
 <tr class="a"><td align="left">releases</td>
-<td align="left"><a href="http://nexusrel.app.betfair/content/groups/public" class="externalLink">http://nexusrel.app.betfair/content/groups/public</a></td>
+<td align="left"><a class="externalLink" href="http://nexusrel.app.betfair/content/groups/public">http://nexusrel.app.betfair/content/groups/public</a></td>
 <td align="center">Yes</td>
 <td align="center">-</td>
 </tr>
 <tr class="b"><td align="left">snapshots</td>
-<td align="left"><a href="http://nexusdev.app.betfair/content/groups/public" class="externalLink">http://nexusdev.app.betfair/content/groups/public</a></td>
+<td align="left"><a class="externalLink" href="http://nexusdev.app.betfair/content/groups/public">http://nexusdev.app.betfair/content/groups/public</a></td>
 <td align="center">-</td>
 <td align="center">Yes</td>
 </tr>
 <tr class="a"><td align="left">central</td>
-<td align="left"><a href="http://repo1.maven.org/maven2" class="externalLink">http://repo1.maven.org/maven2</a></td>
+<td align="left"><a class="externalLink" href="http://repo1.maven.org/maven2">http://repo1.maven.org/maven2</a></td>
 <td align="center">Yes</td>
 <td align="center">-</td>
 </tr>
@@ -310,11 +310,11 @@
 <th align="center">central</th>
 </tr>
 <tr class="a"><td align="left">junit:junit:jar:4.6</td>
-<td align="center"><a href="http://repo1.maven.org/maven2/junit/junit/4.6/junit-4.6.jar" class="externalLink"><img alt="Found at http://repo1.maven.org/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td align="center"><a class="externalLink" href="http://repo1.maven.org/maven2/junit/junit/4.6/junit-4.6.jar"><img alt="Found at http://repo1.maven.org/maven2" src="images/icon_success_sml.gif" /></a></td>
 <td align="center">-</td>
-<td align="center"><a href="http://nexusrel.app.betfair/content/groups/public/junit/junit/4.6/junit-4.6.jar" class="externalLink"><img alt="Found at http://nexusrel.app.betfair/content/groups/public" src="images/icon_success_sml.gif" /></a></td>
+<td align="center"><a class="externalLink" href="http://nexusrel.app.betfair/content/groups/public/junit/junit/4.6/junit-4.6.jar"><img alt="Found at http://nexusrel.app.betfair/content/groups/public" src="images/icon_success_sml.gif" /></a></td>
 <td align="center">-</td>
-<td align="center"><a href="http://repo1.maven.org/maven2/junit/junit/4.6/junit-4.6.jar" class="externalLink"><img alt="Found at http://repo1.maven.org/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td align="center"><a class="externalLink" href="http://repo1.maven.org/maven2/junit/junit/4.6/junit-4.6.jar"><img alt="Found at http://repo1.maven.org/maven2" src="images/icon_success_sml.gif" /></a></td>
 </tr>
 <tr class="b"><th align="left">Total</th>
 <th align="center">maven.org</th>
