--- a/master/maven/mail-lists.html
+++ b/master/maven/mail-lists.html
@@ -171,8 +171,8 @@
 <tr class="b"><td>virtualheap user list</td>
 <td>Subscribe</td>
 <td>Unsubscribe</td>
-<td><a href="mailto:virtualheap@googlegroups.com" class="externalLink">Post</a></td>
-<td><a href="https://groups.google.com/forum/#!forum/virtualheap" class="externalLink">groups.google.com</a></td>
+<td><a class="externalLink" href="mailto:virtualheap@googlegroups.com">Post</a></td>
+<td><a class="externalLink" href="https://groups.google.com/forum/#!forum/virtualheap">groups.google.com</a></td>
 </tr>
 </table>
 </div>
