--- a/master/maven/project-summary.html
+++ b/master/maven/project-summary.html
@@ -169,10 +169,10 @@
 <td>virtualheap</td>
 </tr>
 <tr class="a"><td>Description</td>
-<td>A dramework for replicated objects</td>
+<td>A framework for replicated objects</td>
 </tr>
 <tr class="b"><td>Homepage</td>
-<td><a href="http://github.com/betfair/virtualheap" class="externalLink">http://github.com/betfair/virtualheap</a></td>
+<td><a class="externalLink" href="http://betfair.github.io/virtualheap">http://betfair.github.io/virtualheap</a></td>
 </tr>
 </table>
 </div>
@@ -184,7 +184,7 @@
 <td>Betfair</td>
 </tr>
 <tr class="a"><td>URL</td>
-<td><a href="http://www.betfair.com" class="externalLink">http://www.betfair.com</a></td>
+<td><a class="externalLink" href="http://www.betfair.com">http://www.betfair.com</a></td>
 </tr>
 </table>
 </div>
