--- a/master/maven/index.html
+++ b/master/maven/index.html
@@ -161,7 +161,7 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section"><h2>About virtualheap</h2>
-<p>A dramework for replicated objects</p>
+<p>A framework for replicated objects</p>
 </div>
 
       </div>
