--- a/master/maven/team-list.html
+++ b/master/maven/team-list.html
@@ -171,7 +171,7 @@
 </tr>
 <tr class="b"><td><a name="all"></a>all</td>
 <td>All developers</td>
-<td><a href="mailto:virtualheap@googlegroups.com" class="externalLink">virtualheap@googlegroups.com</a></td>
+<td><a class="externalLink" href="mailto:virtualheap@googlegroups.com">virtualheap@googlegroups.com</a></td>
 </tr>
 </table>
 </div>
